@@ -88,6 +88,7 @@ S3method(summary,textmodel_wordscores_predicted)
 S3method(syllables,character)
 S3method(syllables,tokenizedTexts)
 S3method(tail,dfm)
+S3method(texts,character)
 S3method(texts,corpus)
 S3method(texts,corpusSource)
 S3method(toLower,"NULL")
