@@ -1,38 +1,48 @@
 #' plot features as a wordcloud
 #' 
 #' The default plot method for a \code{\link{dfm}} object.  Produces a wordcloud
-#' plot for the features of the dfm, weighted by the total frequencies.  To 
-#' produce word cloud plots for specific documents, the only way currently to do
-#' this is to produce a dfm only from the documents whose features you want 
-#' plotted.
+#' plot for the features of the dfm, where the feature labels are plotted with 
+#' their sizes proportional to their numerical values in the dfm.  When 
+#' \code{comparison = TRUE}, it plots comparison word clouds by document.
+#' @details The default is to plot the word cloud of all of the features in the 
+#'   dfm, summed across documents.  To produce word cloud plots for specific 
+#'   document or set of documents, you need to slice out the document(s) from
+#'   the dfm.
+#'   
+#'   Comparison word cloud plots may be plotted by setting \code{comparison = 
+#'   TRUE}, which plots a separate grouping for \emph{each document} in the dfm.
+#'   This means that you will need to slice out just a few documents from the
+#'   dfm, or to create a dfm where the "documents" represent a subset or a
+#'   grouping of documents by some document variable.
 #' @param x a dfm object
-#' @param comparison if TRUE, plot a \link[wordcloud]{comparison.cloud} 
-#'   comparison cloud instead of a simple wordcloud
+#' @param comparison if \code{TRUE}, plot a
+#'   \code{\link[wordcloud]{comparison.cloud}} instead of a simple wordcloud,
+#'   one grouping per document
 #' @param ... additional parameters passed to to \link[wordcloud]{wordcloud} or 
 #'   to \link{text} (and \link{strheight}, \link{strwidth})
-#' @seealso \link[wordcloud]{wordcloud}
+#' @seealso \code{\link[wordcloud]{wordcloud}},
+#'   \code{\link[wordcloud]{comparison.cloud}}
 #' @examples
 #' # plot the features (without stopwords) from Obama's two inaugural addresses
-#' mydfm <- dfm(subset(inaugCorpus, President=="Obama"), verbose=FALSE,
-#'              ignoredFeatures=stopwords("english"))
+#' mydfm <- dfm(subset(inaugCorpus, President=="Obama"), verbose = FALSE,
+#'              ignoredFeatures = stopwords("english"))
 #' plot(mydfm)
 #' 
-#' # plot only Lincoln's inaugural address
-#' plot(dfm(subset(inaugCorpus, President=="Lincoln"), verbose=FALSE,
-#'      ignoredFeatures=stopwords("english")))
-#' #comparison plot of Irish government vs opposition
-#' side <- ifelse(docvars(ie2010Corpus, 'party') == 'FF' | docvars(ie2010Corpus, 'party') == 'FF', "govt", "opp")
-#' docvars(ie2010Corpus, 'side') <- side
-#' sideDfm <- weight(dfm(ie2010Corpus, groups = 'side'), type='tfidf')
-#' plot(sideDfm, comparison=TRUE)
 #' # plot in colors with some additional options passed to wordcloud
-#' plot(mydfm, random.color=TRUE, rot.per=.25, colors=sample(colors()[2:128], 5))
+#' plot(mydfm, random.color = TRUE, rot.per = .25, colors = sample(colors()[2:128], 5))
+#'
+#' \dontrun{# comparison plot of Irish government vs opposition
+#' govtopp <- factor(ifelse(ie2010Corpus[, "party"] %in% c("FF", "Green"), "Govt", "Opp"))
+#' govtoppDfm <- dfm(ie2010Corpus, groups = govtopp, verbose = FALSE)
+#' plot(tfidf(govtoppDfm), comparison = TRUE)
+#' # compare to non-tf-idf version
+#' plot(sideDfm, comparison = TRUE)}
 #' @export
-plot.dfm <- function(x, comparison=FALSE, ...) {
-    if(comparison){
-        if(ndoc(x) > 8) stop("Too many documents to plot comparison, use 8 or fewer documents.")
+plot.dfm <- function(x, comparison = FALSE, ...) {
+    if (comparison) {
+        if (ndoc(x) > 8) stop("Too many documents to plot comparison, use 8 or fewer documents.")
         wordcloud::comparison.cloud(t(x))
-    }else{
+    } else {
         wordcloud::wordcloud(features(x), colSums(x), ...)
     }
 }
